# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_02_03_190915) do
+ActiveRecord::Schema[7.1].define(version: 2024_02_03_225555) do
   create_table "products", id: :string, force: :cascade do |t|
     t.string "name", null: false
     t.float "price", null: false
@@ -18,4 +18,25 @@ ActiveRecord::Schema[7.1].define(version: 2024_02_03_190915) do
     t.datetime "updated_at", null: false
   end
 
+  create_table "ticket_details", force: :cascade do |t|
+    t.integer "ticket_id"
+    t.string "product_id"
+    t.string "product_name", null: false
+    t.integer "quantity", null: false
+    t.float "price_per_unit", null: false
+    t.float "total_price", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["product_id"], name: "index_ticket_details_on_product_id"
+    t.index ["ticket_id"], name: "index_ticket_details_on_ticket_id"
+  end
+
+  create_table "tickets", force: :cascade do |t|
+    t.float "total_price"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  add_foreign_key "ticket_details", "products"
+  add_foreign_key "ticket_details", "tickets"
 end
