# swagger/v1/swagger.yaml
@@ -7,11 +7,15 @@ paths:
   "/products":
     get:
       summary: list products
+      tags:
+      - Products
       responses:
         '200':
           description: successful
     post:
       summary: create product
+      tags:
+      - Products
       parameters: []
       responses:
         '201':
@@ -42,11 +46,15 @@ paths:
         type: string
     get:
       summary: show product
+      tags:
+      - Products
       responses:
         '200':
           description: successful
     patch:
       summary: update product
+      tags:
+      - Products
       parameters: []
       responses:
         '200':
@@ -63,6 +71,8 @@ paths:
                   type: number
     put:
       summary: update product
+      tags:
+      - Products
       parameters: []
       responses:
         '200':
@@ -79,8 +89,70 @@ paths:
                   type: number
     delete:
       summary: delete product
+      tags:
+      - Products
       responses:
         '204':
+          description: successful
+  "/tickets":
+    get:
+      summary: list tickets
+      tags:
+      - Tickets
+      responses:
+        '200':
+          description: successful
+    post:
+      summary: create ticket
+      tags:
+      - Tickets
+      parameters: []
+      responses:
+        '201':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                products_ids:
+                  type: string
+              required:
+              - products_ids
+  "/tickets/preview":
+    post:
+      summary: preview ticket
+      tags:
+      - Tickets
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                products_ids:
+                  type: string
+              required:
+              - products_ids
+  "/tickets/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show ticket
+      tags:
+      - Tickets
+      responses:
+        '200':
           description: successful
 servers:
 - url: http://{defaultHost}
